--- a/src/components/Greeting.css
+++ b/src/components/Greeting.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: white;
 }
 
 .greetingTitle {
@@ -16,7 +17,7 @@
 }
 
 .fadeIn {
-    animation: fade-in 2s;
+    animation: fade-in 3s;
     animation-fill-mode: forwards;
 }
 
