--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: white;
+  color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
