--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,11 +1,10 @@
 .home {
-    position: absolute;
-    top: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100% - 4rem);
+    height: 100%;
     width: 100%;
+    position: relative;
     overflow: hidden;
 }
 
@@ -14,8 +13,7 @@
     position: absolute;
     bottom: -5rem;
     left: 3%;
-    animation: fade-in 750ms;
-    animation: slide-up 750ms;
+    animation: fade-in 750ms, slide-up 750ms;
 }
 
 .home .info-container {
@@ -30,8 +28,7 @@
     left: 25%;
     margin: 2rem;
     padding: 0.5rem;
-    animation: fade-in 750ms;
-    animation: slide-left 750ms;
+    animation: fade-in 750ms, slide-left 750ms;
 }
 
 .home .info-container > h1,
@@ -40,11 +37,11 @@
 }
 
 /* Mobile View Styling */
-.home.mobile {
+.mobile .home {
     flex-direction: column;
 }
 
-.home.mobile #cartoon-ethan {
+.mobile .home #cartoon-ethan {
     position: static;
     margin-top: 3%;
     height: unset;
@@ -52,7 +49,7 @@
     animation: unset;
 }
 
-.home.mobile .info-container {
+.mobile .home .info-container {
     transform: translateX(0);
     text-align: center;
     width: auto;
