--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -1,18 +1,25 @@
 @keyframes fade-in {
     from {
         opacity: 0;
+        visibility: hidden;
+        display: none;
     }
     to {
         opacity: 1;
+        visibility: visible;
+        display: revert;
     }
 }
 
 @keyframes fade-out {
     from {
         opacity: 1;
+        visibility: visible;
     }
     to {
         opacity: 0;
+        visibility: hidden;
+        display: none;
     }
 }
 
