--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,26 +1,177 @@
 .project-container {
-    background: white;
-    box-shadow: 0 0 0.25rem black;
-    border-radius: 0.5rem;
-    padding: 1.25rem;
-    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    flex-grow: 1;
+    width: 100%;
+    animation: slide-left 500ms forwards;
+    box-sizing: border-box;
+    padding: 1rem 4rem 2rem 4rem;
 }
+
+.project-container.not-found {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.project-container.not-found .message {
+    text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-container.not-found .message h1 {
+    margin: 1rem 0;
+}
+
+.project-container.not-found .message p {
+    margin: 0;
+    font-size: 1.25rem;
+}
+
+/* Back Button Styling */
+.project-container .back-button {
+    width: max-content;
+    align-self: flex-end;
+}
+
+.project-container .back-button .arrow {
+    display: inline-block;
+    font-size: 1.25rem;
+    margin-right: 0.75rem;
+}
+
+.project-container .back-button > a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: bold;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+}
+
+.project-container .back-button > a:hover,
+.project-container .back-button > a:focus {
+    color: orangered;
+}
+
+.project-container .back-button > a:hover .arrow,
+.project-container .back-button > a:focus .arrow {
+    animation: bounce-left 500ms;
+    animation-timing-function: cubic-bezier(0, -1, 1, 2);
+}
+/* *** */
 
 .project-container .project-header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-block-end: 0.5rem;
 }
 
-.project-container .project-header .project-title {
-    margin-block-start: 0;
-    margin-block-end: 0;
+.project-container .project-header > div > * {
+    display: inline-block;
+}
+
+.project-container .project-title {
+    margin: 0;
+    margin-right: 1rem;
+}
+
+.project-container .project-year {
+    margin-right: 1rem;
+}
+
+.project-container .project-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.project-container .project-links > li {
+    display: inline-block;
+}
+
+.project-container .project-links svg {
+    width: 1.5rem;
+    margin: 0.5rem;
+}
+
+.project-container .project-details {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.project-container .label {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.project-container .project-description {
+    max-width: 75%;
+}
+
+.project-container .project-description a {
+    color: inherit;
+}
+
+.project-container .project-skills {
+    list-style-type: none;
+    margin: 0 4rem;
+    padding: 0
+}
+
+.project-container .project-skills .project-skill {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    font-size: 0.9rem;
+    margin: 0.25rem 0;
 }
 
 .project-container .project-image {
-    width: 32rem;
-    height: 18rem;
-    background: gray;
+    align-self: center;
+    width: 75%;
+}
+
+.project-container div.project-image {
+    background: lightgray;
+    height: calc((75vw - 4rem) * 0.5625)
+}
+
+/* Mobile View Styling */
+.mobile .project-container {
+    padding: 1rem 2rem 2rem 2rem;
+}
+
+.mobile .project-container .project-header {
     margin-top: 1rem;
+}
+
+.mobile .project-container .project-details {
+    flex-direction: column;
+    margin: 0.5rem 0;
+}
+
+.mobile .project-container .project-description {
+    max-width: 100%;
+}
+
+.mobile .project-container .project-details h4 {
+    margin: 1rem auto;
+}
+
+.mobile .project-container .project-skills {
+    margin: 0.5rem 0;
+}
+
+.mobile .project-container .project-image {
+    width: 100%;
+}
+
+.mobile .project-container div.project-image {
+    height: calc((100vw - 4rem) * 0.5625);
 }
