--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -46,3 +46,15 @@
         transform: translateX(-100%);
     }
 }
+
+@keyframes bounce-left {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-50%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
