--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -20,8 +20,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: white;
-    box-shadow: 0 0 1rem 2rem white;
+    background: var(--primary-color);
+    box-shadow: 0 0 1rem 2rem var(--primary-color);
     border-radius: 0.5rem;
     width: 35%;
     position: relative;
@@ -47,7 +47,7 @@
     top: 1rem;
 }
 
-.home-container .social-links > a > * {
+.home-container .social-links svg {
     width: 30px;
 }
 
