--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -122,7 +122,7 @@
 .resume-button > a {
     border: 2px solid var(--tertiary-color);
     border-radius: 6px;
-    padding: 0.75rem 1rem;
+    padding: 10px 15px;
     font-weight: bold;
     text-decoration: none;
     color: var(--tertiary-color);
